--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
-    padding: 10px 60px;
     display: flex;
     flex-direction: column;
 }
@@ -12,27 +11,39 @@ ul {
 }
 
 .header{
+    background-color: #1f2937;
+    color: white;
+    padding: 0px 13%;
+
+    flex: 1 0 5%;
+
     display:flex;
     justify-content: space-between;
     align-items: center;
-    flex: 1 0 5%;
 }
 
 .header h3{
-    font-size:18px;
-    flex: 2 0 65%;
+    font-size:24px;
+    color: #F9FAF8;
+
+    flex: 2 0 60%;
+    
 }
 .header ul{
-    font-size: 14px;
+    font-size: 18px;
+    color: #E5E7EB;
     padding:0;
-    flex: 0 2 35%;
+
+    flex: 0 0 40%;
+    
     display:flex;
     justify-content: center;
     align-items: center;
+    gap: 15px;
     
 }
 .header li{
-    flex: 0 1 33%;
+    flex: 0 3 auto;
     display: flex;
     justify-content: center;
 }
@@ -41,8 +52,65 @@ ul {
     flex: 9 0 90%;
 }
 
+.section-1{
+    padding: 60px 13%;
+    background-color: #1f2937;
+    color: white;
+
+    display: flex;
+}
+.section-1 .subsection{
+    flex: 1 1 50%;
+    margin-right: 40px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.section-1 .subsection h1{
+    font-size: 48px; 
+    font-weight: 800;
+    color: #F9FAF8;
+
+    margin: 0;
+
+}
+.section-1 .subsection p{
+    font-size: 18px;
+    color: #E5E7EB;
+
+    margin: 10px 0;
+
+}
+.section-1 .subsection button {
+    border: #3882F6;
+    background-color: #3882F6;
+    border-radius: 5px;
+    color:#F9FAF8;
+    padding: 5px 24px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-1 img{
+    background-color: #e5e7eb9f;
+
+    flex: 1 1 45%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .footer{
+    padding: 10px 13%;
+    background-color: #1f2937;
+    color: white;
+
     flex: 1 0 5%;
+
     display: flex;
     justify-content: center;
     align-items: center;
