--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Future work make interactive such that flexbox design does not change
+if user zoom in or out */
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
