--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ p{
     align-items: center;
 }
 
+button{
+    border: 1px solid white; 
+}
+
 .header h3{
     font-size:24px;
     color: #F9FAF8;
@@ -89,12 +93,12 @@ p{
 
 }
 .section-1 .subsection button {
-    border: #3882F6;
     background-color: #3882F6;
-    border-radius: 5px;
     color:#F9FAF8;
     padding: 5px 24px;
-
+    border-color: #3882F6;
+    border-radius: 5px;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -181,6 +185,49 @@ p{
     text-align: right;
 }
 
+.section-4 {
+    padding: 20px 13%;
+    background-color: #F9FAF8;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-4 .signup-box{
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 5px;
+    padding: 20px 50px;
+
+    flex: auto;
+
+    display: flex;
+} 
+
+.section-4 .signup-box .text {
+    flex: 0 0 70%
+}
+
+.signup-box h4 {
+    font-size: 24px;
+    margin: 0;
+}
+
+.signup-box p {
+    font-size: 18px;
+}
+
+.section-4 .signup-box  button{
+    background-color: #3882F6;
+    color: #F9FAF8;
+
+    border-color: #F9FAF8;
+    border-radius: 5px;
+    padding: 5px 24px;
+
+    flex: 0 0 30%;
+}
 .footer{
     padding: 10px 13%;
     background-color: #1f2937;
