--- a/style.css
+++ b/style.css
@@ -198,11 +198,13 @@ button{
     background-color: #3882F6;
     color: #F9FAF8;
     border-radius: 5px;
-    padding: 20px 50px;
+    padding: 40px 80px;
 
     flex: auto;
 
     display: flex;
+    justify-content: center;
+    align-items: center;
 } 
 
 .section-4 .signup-box .text {
@@ -216,6 +218,14 @@ button{
 
 .signup-box p {
     font-size: 18px;
+    margin: 0;
+}
+.section-4 .signup-box  .button{
+    flex: 0 0 30%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .section-4 .signup-box  button{
@@ -226,7 +236,7 @@ button{
     border-radius: 5px;
     padding: 5px 24px;
 
-    flex: 0 0 30%;
+    
 }
 .footer{
     padding: 10px 13%;
